job inventory and job log
