# api/controllers/logs/controller.go
@@ -50,6 +50,18 @@ func (c *controller) Endpoints() []controllers.Endpoint {
 			Handler:               c.GetComponentContainerLog,
 			AuthorizationPolicies: []string{constants.AuthorizationPolicyAppAdmin},
 		},
+		{
+			Method:                http.MethodGet,
+			Path:                  "/applications/:appName/environments/:envName/jobcomponents/:jobComponentName/jobs/:jobName",
+			Handler:               c.GetJobInventory,
+			AuthorizationPolicies: []string{constants.AuthorizationPolicyAppAdmin},
+		},
+		{
+			Method:                http.MethodGet,
+			Path:                  "/applications/:appName/environments/:envName/jobcomponents/:jobComponentName/jobs/:jobName/log",
+			Handler:               c.GetJobLog,
+			AuthorizationPolicies: []string{constants.AuthorizationPolicyAppAdmin},
+		},
 	}
 }
 
@@ -58,7 +70,7 @@ func (c *controller) Endpoints() []controllers.Endpoint {
 // @Tags Inventory
 // @Produce json
 // @Security ApiKeyAuth
-// @Success 200 {object} models.ComponentInventoryResponse
+// @Success 200 {object} models.InventoryResponse
 // @Failure 400 {object} errors.Status
 // @Failure 401 {object} errors.Status
 // @Failure 403 {object} errors.Status
@@ -80,32 +92,9 @@ func (c *controller) GetComponentInventory(ctx *gin.Context) {
 		return
 	}
 
-	queryParams, err := paramsFromContext[inventoryParams](ctx)
-	if err != nil {
-		ctx.Error(apierrors.NewBadRequestError(apierrors.WithCause(err)))
-		ctx.Abort()
-		return
-	}
-
-	options := queryParams.AsComponentPodInventoryOptions()
-	pods, err := c.appLogsService.ComponentInventory(ctx.Request.Context(), params.AppName, params.EnvName, params.ComponentName, &options)
-	if err != nil {
-		ctx.Error(err)
-		ctx.Abort()
-		return
-	}
-
-	response := models.ComponentInventoryResponse{
-		Replicas: slice.Map(pods, func(s logservice.Pod) models.Replica {
-			return models.Replica{
-				Name:              s.Name,
-				CreationTimestamp: s.CreationTimestamp,
-				LastKnown:         s.LastKnown,
-				Containers:        slice.Map(s.Containers, func(c logservice.Container) models.Container { return models.Container(c) })}
-		}),
-	}
-
-	ctx.JSON(http.StatusOK, response)
+	c.handleInventoryRequest(ctx, func(options *logservice.InventoryOptions) ([]logservice.Pod, error) {
+		return c.appLogsService.ComponentInventory(ctx.Request.Context(), params.AppName, params.EnvName, params.ComponentName, options)
+	})
 }
 
 // GetComponentLog godoc
@@ -216,6 +205,96 @@ func (c *controller) GetComponentContainerLog(ctx *gin.Context) {
 	})
 }
 
+// GetJobInventory godoc
+// @Summary Get inventory (pods and containers) for a job
+// @Tags Inventory
+// @Produce json
+// @Security ApiKeyAuth
+// @Success 200 {object} models.InventoryResponse
+// @Failure 400 {object} errors.Status
+// @Failure 401 {object} errors.Status
+// @Failure 403 {object} errors.Status
+// @Failure 500 {object} errors.Status
+// @Param appName path string true "Application Name"
+// @Param envName path string true "Environment Name"
+// @Param jobComponentName path string true "Job Component Name"
+// @Param jobName path string true "Job Name"
+// @Param start query string false "Start time" format(date-time) example(2023-05-01T08:15:00+02:00)
+// @Param end query string false "End time" format(date-time) example(2023-05-02T12:00:00Z)
+// @Router /applications/{appName}/environments/{envName}/jobcomponents/{jobComponentName}/jobs/{jobName} [get]
+func (c *controller) GetJobInventory(ctx *gin.Context) {
+	var params struct {
+		params.App
+		params.Env
+		params.JobComponent
+		params.Job
+	}
+	if err := ctx.BindUri(&params); err != nil {
+		ctx.AbortWithError(http.StatusInternalServerError, err)
+		return
+	}
+
+	c.handleInventoryRequest(ctx, func(options *logservice.InventoryOptions) ([]logservice.Pod, error) {
+		return c.appLogsService.JobInventory(ctx.Request.Context(), params.AppName, params.EnvName, params.JobComponentName, params.JobName, options)
+	})
+}
+
+// GetJobLog godoc
+// @Summary Get log for a job
+// @Tags Logs
+// @Produce plain
+// @Security ApiKeyAuth
+// @Success 200 {string} string
+// @Failure 400 {object} errors.Status
+// @Failure 401 {object} errors.Status
+// @Failure 403 {object} errors.Status
+// @Failure 500 {object} errors.Status
+// @Param appName path string true "Application Name"
+// @Param envName path string true "Environment Name"
+// @Param jobComponentName path string true "Job Component Name"
+// @Param jobName path string true "Job Name"
+// @Param tail query integer false "Number of rows to return from the tail of the log" example(100)
+// @Param start query string false "Start time" format(date-time) example(2023-05-01T08:15:00+02:00)
+// @Param end query string false "End time" format(date-time) example(2023-05-02T12:00:00Z)
+// @Param file query boolean false "Response as attachment"
+// @Router /applications/{appName}/environments/{envName}/jobcomponents/{jobComponentName}/jobs/{jobName}/log [get]
+func (c *controller) GetJobLog(ctx *gin.Context) {
+	var params struct {
+		params.App
+		params.Env
+		params.JobComponent
+		params.Job
+	}
+	if err := ctx.BindUri(&params); err != nil {
+		ctx.AbortWithError(http.StatusInternalServerError, err)
+		return
+	}
+
+	c.handleLogRequest(ctx, func(options *logservice.LogOptions) (io.Reader, error) {
+		return c.appLogsService.JobLog(ctx.Request.Context(), params.AppName, params.EnvName, params.JobComponentName, params.JobName, options)
+	})
+}
+
+func (c *controller) handleInventoryRequest(ctx *gin.Context, inventorySource func(options *logservice.InventoryOptions) ([]logservice.Pod, error)) {
+	queryParams, err := paramsFromContext[inventoryParams](ctx)
+	if err != nil {
+		ctx.Error(apierrors.NewBadRequestError(apierrors.WithCause(err)))
+		ctx.Abort()
+		return
+	}
+
+	options := queryParams.AsInventoryOptions()
+	pods, err := inventorySource(&options)
+	if err != nil {
+		ctx.Error(err)
+		ctx.Abort()
+		return
+	}
+
+	response := inventoryRepsonseFromPods(pods)
+	ctx.JSON(http.StatusOK, response)
+}
+
 func (c *controller) handleLogRequest(ctx *gin.Context, logSource func(options *logservice.LogOptions) (io.Reader, error)) {
 	queryParams, err := paramsFromContext[logParams](ctx)
 	if err != nil {
@@ -238,4 +317,16 @@ func (c *controller) handleLogRequest(ctx *gin.Context, logSource func(options *
 	}
 
 	ctx.DataFromReader(200, -1, "text/plain; charset=utf-8", logReader, extraHeaders)
+}
+
+func inventoryRepsonseFromPods(pods []logservice.Pod) models.InventoryResponse {
+	return models.InventoryResponse{
+		Replicas: slice.Map(pods, func(s logservice.Pod) models.Replica {
+			return models.Replica{
+				Name:              s.Name,
+				CreationTimestamp: s.CreationTimestamp,
+				LastKnown:         s.LastKnown,
+				Containers:        slice.Map(s.Containers, func(c logservice.Container) models.Container { return models.Container(c) })}
+		}),
+	}
 }
