# docs/swagger.yaml
@@ -7,13 +7,6 @@ definitions:
       reason:
         type: string
     type: object
-  models.ComponentInventoryResponse:
-    properties:
-      replicas:
-        items:
-          $ref: '#/definitions/models.Replica'
-        type: array
-    type: object
   models.Container:
     properties:
       creationTimestamp:
@@ -25,6 +18,13 @@ definitions:
       lastKnown:
         example: "2023-01-31T08:00:00Z"
         type: string
+    type: object
+  models.InventoryResponse:
+    properties:
+      replicas:
+        items:
+          $ref: '#/definitions/models.Replica'
+        type: array
     type: object
   models.Replica:
     properties:
@@ -81,7 +81,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.ComponentInventoryResponse'
+            $ref: '#/definitions/models.InventoryResponse'
         "400":
           description: Bad Request
           schema:
@@ -317,6 +317,141 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Get log for a replica
+      tags:
+      - Logs
+  /applications/{appName}/environments/{envName}/jobcomponents/{jobComponentName}/jobs/{jobName}:
+    get:
+      parameters:
+      - description: Application Name
+        in: path
+        name: appName
+        required: true
+        type: string
+      - description: Environment Name
+        in: path
+        name: envName
+        required: true
+        type: string
+      - description: Job Component Name
+        in: path
+        name: jobComponentName
+        required: true
+        type: string
+      - description: Job Name
+        in: path
+        name: jobName
+        required: true
+        type: string
+      - description: Start time
+        example: "2023-05-01T08:15:00+02:00"
+        format: date-time
+        in: query
+        name: start
+        type: string
+      - description: End time
+        example: "2023-05-02T12:00:00Z"
+        format: date-time
+        in: query
+        name: end
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.InventoryResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errors.Status'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/errors.Status'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/errors.Status'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errors.Status'
+      security:
+      - ApiKeyAuth: []
+      summary: Get inventory (pods and containers) for a job
+      tags:
+      - Inventory
+  /applications/{appName}/environments/{envName}/jobcomponents/{jobComponentName}/jobs/{jobName}/log:
+    get:
+      parameters:
+      - description: Application Name
+        in: path
+        name: appName
+        required: true
+        type: string
+      - description: Environment Name
+        in: path
+        name: envName
+        required: true
+        type: string
+      - description: Job Component Name
+        in: path
+        name: jobComponentName
+        required: true
+        type: string
+      - description: Job Name
+        in: path
+        name: jobName
+        required: true
+        type: string
+      - description: Number of rows to return from the tail of the log
+        example: 100
+        in: query
+        name: tail
+        type: integer
+      - description: Start time
+        example: "2023-05-01T08:15:00+02:00"
+        format: date-time
+        in: query
+        name: start
+        type: string
+      - description: End time
+        example: "2023-05-02T12:00:00Z"
+        format: date-time
+        in: query
+        name: end
+        type: string
+      - description: Response as attachment
+        in: query
+        name: file
+        type: boolean
+      produces:
+      - text/plain
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errors.Status'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/errors.Status'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/errors.Status'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errors.Status'
+      security:
+      - ApiKeyAuth: []
+      summary: Get log for a job
       tags:
       - Logs
 schemes:
